--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,9 @@ version: 0.1
 phases:
   build:
     commands:
-      - echo Nothing to do yet
+      - npm install
+      - npm run webpack
+      -
 
 artifacts:
   files:
@@ -12,3 +14,4 @@ artifacts:
     - Cedric-Dana-Resume.pdf
     - styles/main.css
     - images/*
+    - dist/bundle.js
